WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86321
REGRESSION (
r116670
): Cannot login to iCloud
https://bugs.webkit.org/show_bug.cgi?id=86321
Summary
REGRESSION (r116670): Cannot login to iCloud
Katsunobu.Oide
Reported
2012-05-13 12:05:39 PDT
WebKit does not login to iCloud waiting with the spinning, while Safari and Chrome does.
Attachments
Fix
(1.72 KB, patch)
2012-05-14 20:33 PDT
,
Gavin Barraclough
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-05-14 14:59:18 PDT
<
rdar://problem/11434252
>
Gavin Barraclough
Comment 2
2012-05-14 20:33:16 PDT
Created
attachment 141849
[details]
Fix
Filip Pizlo
Comment 3
2012-05-14 20:36:42 PDT
Comment on
attachment 141849
[details]
Fix Awesome bug. :-) R=me.
Gavin Barraclough
Comment 4
2012-05-14 20:43:07 PDT
Fixed in
r117025
Joe Strzemp
Comment 5
2012-05-23 17:43:14 PDT
***
Bug 86325
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug