Cannot login to iCloud https://bugs.webkit.org/show_bug.cgi?id=86321

Reviewed by Filip Pizlo.

This is a bug introduced by bug#85853, we shouldn't allow assignment to
the prototype property of functions to be cached, since we need to clear
the cached inheritorID.

* runtime/JSFunction.cpp:
(JSC::JSFunction::put):



Canonical link: https://commits.webkit.org/104016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117025 268f45cc-cd09-0410-ab3c-d52691b4dbfc